# fastapi-vue-setup

./: .gitignore  README.md  fastapi_vue_setup.py  pyproject.toml
fastapi-vue/: README.md  pyproject.toml
fastapi-vue/fastapi_vue/: __init__.py  hostutil.py  server.py  staticfiles.py
scripts/: release.py
template/backend/: __init__.py  __main__.py  app.py
template/frontend/: vite-plugin-fastapi.js
template/scripts/: devserver.py
template/scripts/fastapi-vue/: build-frontend.py  buildhook.py  buildutil.py  devutil.py  util.py
