[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastapi-vue-setup"
dynamic = ["version"]
description = "Tool to create or patch FastAPI+Vue projects with integrated build/dev systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.14.13",
    "tomlkit>=0.12.0",
]

[project.urls]
Homepage = "https://git.zi.fi/LeoVasanko/fastapi-vue-setup"
Repository = "https://github.com/LeoVasanko/fastapi-vue-setup"

[project.scripts]
fastapi-vue-setup = "fastapi_vue_setup:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["fastapi_vue_setup.py", "template/**/*", "_version.py"]

[dependency-groups]
dev = ["ruff", "fastapi-vue"]

[tool.uv.sources]
fastapi-vue = { path = "fastapi-vue", editable = true }

[tool.uv.workspace]
members = [
    "f",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]  # Conflicting with D211, D212 and formatting

[tool.ruff.lint.per-file-ignores]
"template/**" = ["F821"]  # Undefined names are template placeholders
"template/scripts/devserver.py" = ["N806"]  # MODULE_NAME is a template variable
"fastapi_vue_setup.py" = ["PLR", "C901", "T201", "RUF001"]
